# MCP-demo

./: .env.example  .gitignore  CLAUDE.md  README.md  YOUTUBE_CHANNEL_MCP_README.md  pyproject.toml  semantic_MlIxNOTYMcc_fine.json  semantic_chapters_MlIxNOTYMcc.json  simple_chapters_MlIxNOTYMcc.txt  test_granularity.py  test_granularity_simple.py  test_semantic_analyzer.py  test_simple_update.py  test_single_granularity.py  test_youtube_management.py  test_youtube_update.py  youtube_description_MlIxNOTYMcc.txt
docs/: remote-mcp-authentication-guide.md
src/calculator_mcp/: __main__.py  calculator.py  server.py
src/custom_mcp/: __main__.py  calculator_tools.py  custom_mcp.py  gemini_analyzer.py  github_tools.py  server.py  slack_tools.py  youtube_ai_tools.py  youtube_analytics_tools.py  youtube_auth.py  youtube_channel_tools.py  youtube_content_generator.py  youtube_management_tools.py  youtube_semantic_tools.py  youtube_tools.py
tests/: test_calculator.py  test_calculator_tools.py  test_github_tools.py  test_youtube_tools.py
